--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseurl = "https://dvisagie.com"
+baseurl = "https://divanvisagie.github.io"
 contentdir    = "content"
 layoutdir     = "layouts"
-publishdir    = "docs"
+publishdir    = "public"
 title = "Divan Visagie"
 canonifyurls  = true
 
