--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # baseurl = "https://divanvisagie.github.io"
-baseurl = "/"
+baseurl = ""
 contentdir    = "content"
 layoutdir     = "layouts"
 publishdir    = "public"
@@ -13,9 +13,6 @@ googleAnalytics = "UA-140923268-1"
 disqusShortname = "dvisagie-com"
 
 
-#disqusShortname = "XXX"
-#googleAnalytics = "XXX"
-
 [Params]
   subtitle = "My opinions on software and other things"
   logo = "img/avatar.jpeg"
@@ -27,16 +24,6 @@ disqusShortname = "dvisagie-com"
   useHLJS = true
 #  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
 
-#[[Params.bigimg]]
-#  src = "img/triangle.jpg"
-#  desc = "Triangle"
-#[[Params.bigimg]]
-#  src = "img/sphere.jpg"
-#  desc = "Sphere"
-#[[Params.bigimg]]
-#  src = "img/hexagon.jpg"
-#  desc = "Hexagon"
-
 [Author]
   name = "Divan Visagie"
   gitlab = "divan"
@@ -47,7 +34,7 @@ disqusShortname = "dvisagie-com"
 
 [[menu.main]]
     name = "Blog"
-    url = ""
+    identifier = "posts"
     weight = 1
 
 [[menu.main]]
