--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Divan Visagie <visagiedivan@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "copy-dir": "^1.2.0",
+    "easy-livereload": "^1.3.2",
     "express": "^4.17.1",
     "highlight.js": "^9.15.10",
     "markdown-it": "^10.0.0"
