--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "easy-livereload": "^1.3.2",
     "express": "^4.17.1",
     "highlight.js": "^9.15.10",
-    "markdown-it": "^10.0.0"
+    "markdown-it": "^10.0.0",
+    "underscore": "^1.9.1"
   }
 }
