--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:divanvisagie/blog.git",
   "author": "Divan Visagie <visagiedivan@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "copy-dir": "^1.2.0",
     "easy-livereload": "^1.3.2",
