--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Divan Visagie <visagiedivan@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "node src/main/js/main.js"
   },
   "dependencies": {
     "copy-dir": "^1.2.0",
