--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,4 +52,4 @@ jobs:
         fqdn: dvisagie.com # optional
       env:
         GITHUB_USERNAME: ${{ github.actor }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_PAT }}
+        GITHUB_PAT: ${{ secrets.MY_TOKEN }}
