--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Source code for generating my personal blog written in python.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js",
+    "clean": "rm -rf ./build"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,12 @@
   "homepage": "https://github.com/divanvisagie/blog#readme",
   "dependencies": {
     "fs-extra": "^9.0.1",
-    "markdown-it": "^11.0.1"
+    "markdown-it": "^11.0.1",
+    "markdown-it-highlightjs": "^3.3.0"
+  },
+  "devDependencies": {
+    "connect": "^3.7.0",
+    "express": "^4.17.1",
+    "livereload": "^0.9.1"
   }
 }
