--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build.js",
+    "dev": "node dev.js",
     "clean": "rm -rf ./build"
   },
   "repository": {
