--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,26 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Node.js application
 
 on:
   push:
-    branches: [ trunk ]
+    branches: [ trunk, js ]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v1
+    - name: Set up Node
+    - uses: actions/setup-node@v1
       with:
-        python-version: 3.8
+        node-version: '12'
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      run: npm install
     - name: Build the html output
-      run: |
-        python build.py
+      run: npm run build
         
     - name: GitHub Pages
       uses: crazy-max/ghaction-github-pages@v1.5.1
