--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,7 @@ jobs:
     - name: Set up Node
       
     - uses: actions/setup-node@v1
+      name: Build
       with:
         node-version: '12'
     - run: npm install
