--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "homepage": "https://github.com/divanvisagie/blog#readme",
   "dependencies": {
+    "connect-livereload": "^0.6.1",
     "fs-extra": "^9.0.1",
     "markdown-it": "^11.0.1",
     "markdown-it-highlightjs": "^3.3.0",
+    "nodemon": "^2.0.6",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
