--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/divanvisagie/blog#readme",
   "dependencies": {
-    "connect-livereload": "^0.6.1",
     "fs-extra": "^9.0.1",
     "markdown-it": "^11.0.1",
     "markdown-it-highlightjs": "^3.3.0",
@@ -28,8 +27,8 @@
     "url-join": "^4.0.1"
   },
   "devDependencies": {
-    "connect": "^3.7.0",
-    "express": "^4.17.1",
-    "livereload": "^0.9.1"
+    "chokidar": "^3.4.3",
+    "connect-livereload": "^0.6.1",
+    "express": "^4.17.1"
   }
 }
