--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,11 +35,11 @@ jobs:
           # Commit author's name
           committer_name: Divan Visagie
           # Commit author's email
-          committer_email: me@dvisagie.com # optional
+          committer_email: me@divanv.com # optional
           # Commit message
           commit_message: ${{ github.actor }} # optional
           # Write the given domain name to the CNAME file
-          fqdn: dvisagie.com # optional
+          fqdn: divanv.com # optional
         env:
           GITHUB_USERNAME: ${{ github.actor }}
           GITHUB_PAT: ${{ secrets.MY_TOKEN }}
