--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node build.js",
-    "dev": "node dev.js",
+    "build": "ts-node build.ts",
+    "dev": "ts-node dev.ts",
     "clean": "rm -rf ./build"
   },
   "repository": {
@@ -27,8 +27,15 @@
     "url-join": "^4.0.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^18.11.9",
+    "@types/url-join": "^4.0.1",
     "chokidar": "^3.4.3",
     "connect-livereload": "^0.6.1",
-    "express": "^4.17.1"
+    "dotenv": "^16.0.3",
+    "express": "^4.17.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
   }
 }
