--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "ts-node build.ts",
     "dev": "ts-node dev.ts",
+    "lint": "prettier -c .",
     "clean": "rm -rf ./build"
   },
   "repository": {
@@ -35,6 +36,7 @@
     "connect-livereload": "^0.6.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
