--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Divan's Blog",
-    "short_name": "dvisagie.com",
+    "short_name": "divanv.com",
     "icons": [{
       "src": "/favicon.ico",
       "sizes": "128x128",
